--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "pg": "^8.14.1",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
@@ -55,7 +56,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.19.1",
+    "drizzle-kit": "^0.30.6",
     "eslint": "^9.22.0",
     "eslint-config-next": "^15.2.3",
     "eslint-config-prettier": "^10.1.1",
