--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.17",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
@@ -60,7 +61,7 @@
     "eslint": "^9.22.0",
     "eslint-config-next": "^15.2.3",
     "eslint-config-prettier": "^10.1.1",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.3",
     "prettier": "^3.4.2",
     "tailwindcss": "^4.0.15",
     "typescript": "^5"
